# halation

./: .gitignore  Cargo.toml  Dockerfile  README.md  build.sh  data.txt  docker-compose.yaml  docker-entrypoint.sh  kill.sh  launch.sh  pyproject.toml  sshd_override.conf  uvsync.sh
.cargo/: config.toml
.devcontainer/: devcontainer.json  devcontainers.json
src/: main.rs
src/avoidance_rerouting/: package.xml  setup.cfg  setup.py
src/avoidance_rerouting/avoidance_rerouting/: __init__.py  lidar_detection.py  mock_lidar_publisher.py  rerouting.py
src/avoidance_rerouting/launch/: avoidance_system.launch.xml
src/laser_segmentation/: README.md
src/laser_segmentation/.github/workflows/: build.yml
src/laser_segmentation/include/laser_segmentation/: laser_segmentation.hpp
src/laser_segmentation/launch/: segmentation.launch.py
src/laser_segmentation/src/: laser_segmentation.cpp
src/laser_segmentation/src/segmentation/: jump_distance.cpp  jump_distance_merge.cpp
src/rover_bringup/: package.xml  setup.py
src/rover_bringup/launch/: rover_sensing.launch.py  rover_system.launch.py
src/rover_bringup/rover_bringup/: initialize.py  memory_monitor.py  node.py
src/rover_control/: package.xml  setup.py
src/rover_control/rover_control/: motor_control.py  motor_interface.py
src/rover_sensing/: package.xml  setup.cfg  setup.py
src/rover_sensing/rover_sensing/: lidar_servo.py  pointcloud_accumulator.py
src/rover_station_sync/: package.xml  setup.cfg  setup.py
src/rover_station_sync/rover_station_sync/: proxy_node.py
src/slg_msgs/: CMakeLists.txt  README.md  package.xml
src/slg_msgs/.github/workflows/: build.yml
src/slg_msgs/include/slg_msgs/: point2D.hpp  polygon.hpp  segment2D.hpp
src/slg_msgs/msg/: Segment.msg  SegmentArray.msg
web/: README.md  package-lock.json  package.json
web/app/: globals.css  layout.tsx  page.tsx
web/components/: LogViewer.tsx  MotorControl.tsx  UsageChart.tsx  UsageMonitor.tsx
web/hooks/: useRos.ts
(+3 files in other folders)
