[project]
name = "workspace"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "adafruit-blinka>=8.66.2",
    "adafruit-circuitpython-mcp4725>=1.4.18",
    "board>=1.0",
    "fastapi>=0.118.2",
    "fastapi-proxy-lib>=0.3.0",
    "rpi-gpio>=0.7.1",
    "uvicorn>=0.37.0",
]
