<?xml version="1.0"?>
<package format="3">
  <name>avoidance_rerouting</name>
  <version>0.0.1</version>
  <description>LiDAR and rerouting node for rover.</description>

  <maintainer email="hiroki.kimiwada@masason.org">Hiroki Kimiwada</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
