<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rover_station_sync</name>
  <version>0.0.1</version>
  <description>package for bidirectional communication between rover and station</description>
  <maintainer email="hinson@stanford.edu">Hinson Chan</maintainer>
  <license>MIT</license>

  <build_depend>rosbridge_server</build_depend>
  <exec_depend>rosbridge_server</exec_depend>

  <exec_depend>fastapi</exec_depend>
  <exec_depend>uvicorn</exec_depend>
  <exec_depend>fastapi-proxy-lib</exec_depend>


  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
